@@ -6,6 +6,8 @@ Derision: Added optional duration parameter to quest::popup.
 Trevius: SoF - Adventure Merchant Selling is now functional.
 Trevius: SoF - Items with click effects now show the min level required to click them.
 Trevius: SoF - Items being sold now show the correct price that the merchant will pay for them.
+cavedude: Changed the items-0.6.0-DR2-0.6.1-DR1-convert.sql error message to stop confusing people.
+cavedude: Green con KOS NPCs will now aggro clients while sitting.
 
 ==06/15/2009==
 Trevius: SoF - The following fields now show up on items that have values set for them, but the stats are not actually used by the server yet:
